test/error/StForeachStringInString.fu
public static class Test
{
	public static bool Run()
	{
		string s = "foo";
		foreach (string c in s) { //ERROR: Expected 'int' iterator variable
		}
		return true;
	}
}
